seccion sobre nosotros

--- a/index.html
+++ b/index.html
@@ -36,5 +36,14 @@
         </div>
       </div>
     </header>
+    <section class="sobre-nosotros">
+      <div class="contenedor sobre-nosotros-contenido">
+        <div class="img-sobre-nosotros"></div>
+        <div class="texto-sobre-nosotros">
+          <h2>Sobre Nosotros</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, nam aspernatur est quas nihil perspiciatis voluptatem vitae accusantium sit numquam ratione impedit alias provident repellendus voluptates, magni pariatur quod quam.</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
