--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/base-reset.css">
+    <link rel="stylesheet" href="css/base-reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -18,9 +18,7 @@
       <div class="contenedor contenido-header">
         <div class="barra-superior">
           <div class="logo">
-            <h1 class="nombre-sitio">
-              Arquitectura<span>Bosque</span>
-            </h1>
+            <h1 class="nombre-sitio">Arquitectura<span>Bosque</span></h1>
           </div>
           <nav class="navegacion">
             <a class="link" href="#">Inicio</a>
@@ -36,14 +34,75 @@
         </div>
       </div>
     </header>
-    <section class="sobre-nosotros">
-      <div class="contenedor sobre-nosotros-contenido">
-        <div class="img-sobre-nosotros"></div>
-        <div class="texto-sobre-nosotros">
-          <h2>Sobre Nosotros</h2>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, nam aspernatur est quas nihil perspiciatis voluptatem vitae accusantium sit numquam ratione impedit alias provident repellendus voluptates, magni pariatur quod quam.</p>
+    <main>
+      <section class="sobre-nosotros">
+        <div class="contenedor sobre-nosotros-contenido">
+          <div class="img-sobre-nosotros"></div>
+          <div class="texto-sobre-nosotros">
+            <h2>Sobre Nosotros</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Explicabo, nam aspernatur est quas nihil perspiciatis voluptatem
+              vitae accusantium sit numquam ratione impedit alias provident
+              repellendus voluptates, magni pariatur quod quam.
+            </p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+      <section class="seccion-modelos">
+        <div class="contenedor">
+          <header class="seccion-modelos__header">
+            <h2>Conoce Nuestros 3 Modelos</h2>
+          </header>
+
+          <div class="modelos">
+            <article class="modelo modelo--basico">
+              <h3>Modelo Básico</h3>
+              <img
+                src="./08-arquitectura/img/modelo_basico.jpg"
+                alt="Casa modelo básico"
+              />
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Sapiente velit harum asperiores ut officiis quam repellendus
+                nulla eaque quibusdam sunt? Quo fugiat temporibus saepe deleniti
+                odio tenetur nam nostrum maiores?
+              </p>
+              <a class="btn" href="#">Más información</a>
+            </article>
+
+            <article class="modelo modelo--premier">
+              <h3>Modelo Premier</h3>
+              <img
+                src="./08-arquitectura/img/modelo_premier.jpg"
+                alt="Casa modelo premier"
+              />
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa
+                accusantium amet error architecto doloribus itaque mollitia
+                quisquam laboriosam quas aliquid, eligendi optio fugit, natus
+                ipsam quibusdam. Quia quibusdam vitae delectus.
+              </p>
+              <a class="btn" href="#">Más información</a>
+            </article>
+
+            <article class="modelo modelo--elite">
+              <h3>Modelo Elite</h3>
+              <img
+                src="./08-arquitectura/img/modelo_elite.jpg"
+                alt="Casa modelo elite"
+              />
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius
+                minus delectus, natus, pariatur distinctio recusandae rerum
+                adipisci veniam aliquid explicabo praesentium libero suscipit
+                consequatur itaque omnis tempora voluptatem incidunt enim.
+              </p>
+              <a class="btn" href="#">Más información</a>
+            </article>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
