ultimos pasos seccion modelos

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </header>
     <main>
       <section class="sobre-nosotros">
-        <div class="contenedor sobre-nosotros-contenido">
-          <div class="img-sobre-nosotros"></div>
-          <div class="texto-sobre-nosotros">
+        <div class="contenedor sobre-nosotros__contenido">
+          <div class="sobre-nosotros__img"></div>
+          <div class="sobre-nosotros__texto">
             <h2>Sobre Nosotros</h2>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -52,7 +52,7 @@
       <section class="seccion-modelos">
         <div class="contenedor">
           <header class="seccion-modelos__header">
-            <h2>Conoce Nuestros 3 Modelos</h2>
+            <h2>Nuestros modelos</h2>
           </header>
 
           <div class="modelos">
